--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,10 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    implementation "io.insert-koin:koin-android:2.1.6"
+    implementation "io.insert-koin:koin-android-viewmodel:2.1.6"
+
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
